Added support to write to different databases
 * configure write by write options
 ** database
 ** retentionPolicy
 ** consistencyLevel
 ** precision